# Hub_PMIC_nRF54

./: CMakeLists.txt  Kconfig  README_POWER_MANAGEMENT.md  SHIP_MODE_GUIDE.md  build_log.txt  prj.conf
.github/: copilot-instructions.md
boards/: bl54l15_dvk_nrf54l15_cpuapp.conf  bl54l15_dvk_nrf54l15_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp.overlay.bk  nrf54l15dk_nrf54l15_cpuapp.conf.bk  nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay.bk
driver/max32664c/: CMakeLists.txt  Kconfig  max32664c.c  max32664c.h  max32664c_acc.c  max32664c_bl.c  max32664c_init.c  max32664c_interrupt.c  max32664c_worker.c
driver/pmic/: bsp.c  bsp.h  max77658_fg.c  max77658_fg.c.backup  max77658_fg_types.h  max77658_pm.c  max77658_pm.c.backup  max77658_pm.h
driver/pmic/docs/: register_map.txt
dts/bindings/sensor/: maxim,max32664c.yaml
lib/: max32664c_main.c  max32664c_main.h  max77658_main.c  max77658_main.h
lib/comman/: app_i2c_lock.c  app_i2c_lock.h
pmic/: CMakeLists.txt  Kconfig  bsp.c  max77658_fg.h  max77658_pm.h
src/: ble_app.c  ble_app.h  data_manager.c  data_manager.h  main.c  pmic_gpio.c  pmic_gpio.h  storage_manager.c  storage_manager.h
